Refactored code for better legibility

--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -19,7 +19,7 @@
         <input type="text" name="loginUsername" id="loginUsername">
         <label for="loginPassword">Password</label>
         <input type="password" name="loginPassword" id="loginPassword">
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
