--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -34,6 +34,44 @@
             </tbody>
         </table>
 
+        <form id="createCategoryForm">
+            <label for="category">Category</label>
+            <input type="text" name="category" id="category" required>
+            <input type="submit" value="Save" />
+        </form>
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Category</th>
+            </tr>
+            </thead>
+            <tbody id="categoryDisplay">
+            <tr>
+                <td colspan="3">Loading...</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <form id="createJobForm">
+            <label for="job">Job</label>
+            <input type="text" name="job" id="job" required>
+            <input type="submit" value="Save" />
+        </form>
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Category</th>
+            </tr>
+            </thead>
+            <tbody id="jobDisplay">
+            <tr>
+                <td colspan="3">Loading...</td>
+            </tr>
+            </tbody>
+        </table>
+
 
     </body>
 </html>
