--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,6 +17,8 @@
             <label for="checkOut">Check out</label>
             <input type="date" name="checkOutDate" id="checkOut" required>
             <input type="time" name="checkOutTime" required>
+            <label for="categoryId">Category ID</label>
+            <input type="text" name="categoryId" id="categoryId" required>
             <input type="submit" value="Save" />
         </form>
         <table>
@@ -62,7 +64,7 @@
             <thead>
             <tr>
                 <th>ID</th>
-                <th>Category</th>
+                <th>Job</th>
             </tr>
             </thead>
             <tbody id="jobDisplay">
@@ -72,6 +74,19 @@
             </tbody>
         </table>
 
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Username</th>
+            </tr>
+            </thead>
+            <tbody id="userDisplay">
+            <tr>
+                <td colspan="3">Loading...</td>
+            </tr>
+            </tbody>
+        </table>
 
     </body>
 </html>
